--- a/sass/base/_variables.scss
+++ b/sass/base/_variables.scss
@@ -7,3 +7,6 @@ $color-active-secondary: #EFEA5A;
 $color-active-light: #16DB93;
 $color-active-medium: #048BA8;
 $color-active-dark: #A4036F;
+
+$color-module: #23395B;
+$color-module-hover: lighten($color-module, 10%);
