--- a/sass/base/_variables.scss
+++ b/sass/base/_variables.scss
@@ -8,5 +8,5 @@ $color-active-light: #16DB93;
 $color-active-medium: #048BA8;
 $color-active-dark: #A4036F;
 
-$color-module: #23395B;
+$color-module: #00445E;
 $color-module-hover: lighten($color-module, 10%);
