--- a/sass/base/_typo.scss
+++ b/sass/base/_typo.scss
@@ -24,5 +24,25 @@ body{
     &.font-portfolio{
         font-family: "Roboto Condensed", Helvetica, Arial, sans-serif;
         font-weight: 400;
+        color: $color-font-text;
     }
+}
+
+h1{
+    @include set-font(36px, 400, $color-font-heading);
+    margin-bottom: 40px;
+}
+
+h2{
+    @include set-font(28px, 400, $color-font-heading);
+    margin-bottom: 20px;
+}
+
+h3{
+    @include set-font(20px, 400, $color-module-light);
+    margin-bottom: 10px;
+}
+
+p{
+    margin-bottom: 10px;
 }
