--- a/sass/layout/pages/_home.scss
+++ b/sass/layout/pages/_home.scss
@@ -1,5 +1,6 @@
 .content{
     @include set-display(null, calc(100% - 16%), 100%);
+    background-color: $color-light;
     
     margin-left: 16%;
     padding: 30px;
@@ -8,5 +9,55 @@
     @include respond-to('large'){
         width: 100%;
         margin-left: 0;
+    }
+    
+    >section{
+        margin: 5% 10%;
+        
+        >article{
+            @include transition;
+            
+            display: table;
+            border-left: 4px solid $color-module-light;
+            background-color: #fff;
+            box-shadow: 5px 5px 10px rgba(0,0,0,0.1);
+            border-radius: 2px;
+            
+            div{
+                padding: 20px;
+                display: table-cell;
+                vertical-align: top;
+                overflow: hidden;
+                
+                &:first-of-type{
+                    border-right: 4px solid #f8f8f8;
+                }
+                
+                &:last-of-type{
+                    background-color: $color-module-hover;
+                    >ul{
+                        
+                        >li{
+                            @extend .animated;
+                            @extend .bounce-in-right;
+                            margin-bottom: 10px;
+                            
+                            &:last-of-type{
+                                margin-bottom: 0;
+                            }
+                            
+                            h2,label{
+                                color: #fff;
+                            }
+                            
+                            label{
+                                display: block;
+                                margin-bottom: 5px;
+                            }
+                        }
+                    }
+                }
+            }
+        }
     }
 }
