--- a/sass/layout/sections/_skills.scss
+++ b/sass/layout/sections/_skills.scss
@@ -11,6 +11,7 @@
         span{
             @include transition;
             
+            display: block;
             border-radius: 4px;
             padding: 5px 10px;
             background-color: $color-module-light;
