--- a/sass/base/_typo.scss
+++ b/sass/base/_typo.scss
@@ -29,17 +29,22 @@ body{
 }
 
 h1{
-    @include set-font(36px, 400, $color-font-heading);
+    @include set-font(36px, 400, $color-module);
     margin-bottom: 40px;
 }
 
 h2{
-    @include set-font(28px, 400, $color-font-heading);
-    margin-bottom: 20px;
+    @include set-font(28px, 400, $color-module);
+    margin-bottom: 10px;
 }
 
 h3{
-    @include set-font(20px, 400, $color-module-light);
+    @include set-font(20px, 400, $color-module);
+    margin-bottom: 10px;
+}
+
+h4{
+    @include set-font(18px, 400, $color-font-text);
     margin-bottom: 10px;
 }
 
