--- a/sass/layout/pages/_home.scss
+++ b/sass/layout/pages/_home.scss
@@ -1,14 +1,13 @@
 .content{
-    @include set-display(null, calc(100% - 16%), 100%);
-    background-color: $color-light;
-    
+    @include set-display(null, calc(100% - 16%), null);
+    min-height: 100%;
     margin-left: 16%;
     padding: 30px;
+    background-color: $color-module-light;
     
     @include respond-to('small'){
         padding: 10px;
     }
-    
     
     @include respond-to('large'){
         width: 100%;
@@ -32,10 +31,10 @@
                 table-layout: fixed;
             }
             
-            border-left: 4px solid $color-module-light;
+            border-left: 4px solid $color-module-hover;
             background-color: #fff;
             box-shadow: 5px 5px 10px rgba(0,0,0,0.1);
-            border-radius: 2px;
+            border-radius: 0px;
             
             div{
                 padding: 20px;
@@ -43,7 +42,7 @@
                 vertical-align: top;
                 overflow: hidden;
                 
-                &:last-of-type{
+                &.description{
                     background-color: $color-module-hover;
                     >ul{
                         
@@ -68,6 +67,48 @@
                     }
                 }
             }
+        }
+    }
+}
+
+.list{
+    li{
+        margin-bottom: 30px;
+        
+        p{
+            margin-bottom: 5px;
+            padding-left: 20px;
+            position: relative;
+            
+            &:before,
+            &:after{
+                content: '';
+                position: absolute;
+                background-color: $color-module-light;
+                width: 2px;
+            }
+            
+            &:before{
+                left: 10px;
+                height: 12px;
+                transform: rotate(35deg);
+                bottom: 1px;
+            }
+            
+            &:after{
+                left: 5px;
+                height: 5px;
+                transform: rotate(-55deg);
+                bottom: 2px;
+            }
+        }
+        
+        h3{
+            margin: 20px 0;
+        }
+        
+        label{
+            @include set-font(16px, 300, $color-font-heading);
         }
     }
 }
