--- a/sass/main.min.scss
+++ b/sass/main.min.scss
@@ -6,7 +6,8 @@
         'base/base';
 
 @import 'elements/header',
-        'elements/aside';
+        'elements/aside',
+        'elements/icons';
 
 @import 'layout/pages/welcome',
         'layout/pages/home';
