--- a/sass/layout/pages/_home.scss
+++ b/sass/layout/pages/_home.scss
@@ -92,14 +92,14 @@
                 left: 10px;
                 height: 12px;
                 transform: rotate(35deg);
-                bottom: 1px;
+                top: 1px;
             }
             
             &:after{
                 left: 5px;
                 height: 5px;
                 transform: rotate(-55deg);
-                bottom: 2px;
+                top: 7px;
             }
         }
         
