--- a/sass/elements/_aside.scss
+++ b/sass/elements/_aside.scss
@@ -1,12 +1,13 @@
 aside{
-    @include set-display(null, 16%, 100%);
+    @include set-display(null, 80px, 100%);
     position: fixed;
     
     background-color: #fff;
+    box-shadow: 0px 0px 10px rgba(0,0,0,0.1);
     
     @include respond-to('large'){
         display: none;
-        width: 280px;
+        //width: 280px;
     }
     
     .bg-aside{
@@ -20,9 +21,7 @@ aside{
     }
     
     nav{
-        margin: 15% 0;
-        
-        .profile-picture{
+        /*.profile-picture{
             margin: 10% 0 10% 0;
             
             img{
@@ -31,53 +30,63 @@ aside{
                 height: auto;
                 margin: 0 auto;
             }
-        }
+        }*/
         
         >ul{
             >li{
+                margin: 20px 0;
+                position: relative;
+                
+                &:hover{
+                    label{
+                        visibility: visible;
+                        opacity: 1;
+                    }
+                }
                 
                 a{
-                    @include transition;
-                    
-                    display: block;
-                    position: relative;
-                    padding: 15px 20px 15px 35px;
-                    text-transform: uppercase;
-                    letter-spacing: 1px;
-                    color: $color-module;
-                    font-size: 16px;
-                    
-                    &:before{
-                        @include transition;
-                        content: '';
-                        position: absolute;
-                        left: 15px;
-                        top: calc(50% - 8px);
-                        
-                        width: 10px;
-                        height: 10px;
-                        border: 2px solid $color-module;
-                        border-radius: 50%;
-                        
-                    }
-                    
                     &.active{
                         &:before{
-                            
-                        }
-                    }
-                    
-                    &:hover{
-                        background-color: $color-module-light;
-                        color: #fff;
-                        
-                        &:before{
-                            border-color: #fff;
-                            background-color: #fff;
+                            border-color: $color-module-hover;
                         }
                     }
                 }
             }
         }
+    }
+}
+
+.navbar-tooltip{
+    @include transition;
+    
+    visibility: hidden;
+    opacity: 0;
+    
+    position: absolute;
+    background-color: #fff;
+    padding: 10px;
+    border: 2px solid $color-module-hover;
+    white-space: nowrap;
+    left: calc(100% + 20px);
+    top: calc(50% - 20px);
+    
+    &:before,
+    &:after{
+        content: '';
+        position: absolute;
+        top: calc(50% - 10px);
+        border-width: 10px;
+        border-style: solid;
+        border-color: transparent;
+    }
+    
+    &:before{
+        @include tail-color($right: $color-module-hover);
+        left: -21px;
+    }
+    
+    &:after{
+        @include tail-color($right: #fff);
+        left: -18px;
     }
 }
