--- a/sass/layout/pages/_home.scss
+++ b/sass/layout/pages/_home.scss
@@ -9,7 +9,7 @@
         padding: 10px;
     }
     
-    @include respond-to('large'){
+    @include respond-to('small'){
         width: 100%;
         margin-left: 0;
     }
