--- a/sass/elements/_icons.scss
+++ b/sass/elements/_icons.scss
@@ -27,6 +27,7 @@ i,a{
     h1{
         position: relative;
         display: inline-block;
+        z-index: 1;
         
         i{
             position: absolute;
