about me section mobile layout

--- a/sass/base/_helpers.scss
+++ b/sass/base/_helpers.scss
@@ -126,6 +126,10 @@
     width: 50%;
 }
 
+.half-and-quarter-width{
+    width: 75%;
+}
+
 // sass map containing breakpoints
 $breakpoints: (
     'xsmall' : 479px,
