--- a/sass/layout/pages/_home.scss
+++ b/sass/layout/pages/_home.scss
@@ -14,6 +14,10 @@
     >section{
         margin: 5% 15%;
         
+        @include respond-to('medium'){
+            margin: 5%;
+        }
+        
         @include respond-to('small'){
             margin: 5% 0;
         }
@@ -139,6 +143,55 @@
         label{
             @include set-font(16px, 300, $color-font-heading);
         }
+    }
+}
+
+#about{
+    article{
+        padding-right: 150px;
+        
+        @include respond-to('medium'){
+            width: 100%;
+        }
+        
+        @include respond-to('small'){
+            padding-right: 200px;
+        }
+        
+        @include respond-to('xsmall'){
+            padding-right: 0;
+            
+            h1{
+                margin-bottom: 220px;
+            }
+        }
+    }
+}
+
+.profile-picture-wrapper{
+    position: absolute;
+    right: -40px;
+    top: calc(50% - 90px);
+    background-color: #fff;
+    
+    width: 180px;
+    height: 180px;
+    border-radius: 50%;
+    
+    img{
+        display: block;
+        max-width: 100%;
+        margin: 10px auto;
+    }
+    
+    @include respond-to('small'){
+        right: 10px;
+        box-shadow: 0px 5px 5px rgba(0,0,0,0.1);
+    }
+    
+    @include respond-to('xsmall'){
+        top: 60px;
+        right: calc(50% - 90px);
     }
 }
 
