--- a/sass/base/_variables.scss
+++ b/sass/base/_variables.scss
@@ -16,3 +16,7 @@ $color-module-light-hover: darken($color-module-light, 10%);
 
 $color-font-heading: #212121;
 $color-font-text: lighten($color-font-heading, 10%);
+
+
+/* units */
+$gutter: 10%;
