portfolio page build up

--- a/sass/elements/_icons.scss
+++ b/sass/elements/_icons.scss
@@ -34,6 +34,10 @@ i,a{
         background: url('../img/user.svg') no-repeat center;
     }
     
+    &.icon-portfolio{
+        background: url('../img/portfolio.svg') no-repeat center;
+    }
+    
     &.icon-skype{
         background: url('../img/icons/skype.svg') no-repeat center;
     }
