--- a/sass/layout/pages/portfolio/_portfolio.scss
+++ b/sass/layout/pages/portfolio/_portfolio.scss
@@ -15,13 +15,16 @@
                 @extend .animated;
             
                 display: inline-block;
+                position: relative;
                 border: 4px solid transparent;
                 float: left;
-                margin-right: 20px;
+                margin-right: 40px;
+                margin-bottom: 40px;
                 padding: 20px;
                 background-color: #fff;
                 cursor: pointer;
                 box-shadow: 0px 3px 10px 0px rgba(0,0,0,0.1);
+                
                 
                 &:last-of-type{
                     margin-right: 0;
