--- a/sass/main.min.scss
+++ b/sass/main.min.scss
@@ -8,7 +8,8 @@
 
 @import 'elements/header',
         'elements/aside',
-        'elements/icons';
+        'elements/icons',
+        'elements/input';
 
 @import 'layout/pages/welcome',
         'layout/pages/home',
