--- a/sass/layout/pages/portfolio/_portfolio.scss
+++ b/sass/layout/pages/portfolio/_portfolio.scss
@@ -2,8 +2,8 @@
     min-height: 100%;
     background: 
         linear-gradient(
-          rgba(242, 242, 242, 0.95), 
-          rgba(242, 242, 242, 0.95)
+          rgba(255, 255, 255, 0.95), 
+          rgba(255, 255, 255, 0.95)
         ),
         url('../img/img-background-portfolio.jpg') center;
     
@@ -18,13 +18,12 @@
         >li{
             &.portfolio-box-item{
                 @include transition;
-                @extend .slide-in-up;
-                @extend .animated;
-            
-                display: inline-block;
+                
                 position: relative;
+                
+                display: inline-block;
+                max-width: 340px;
                 border: 4px solid transparent;
-                float: left;
                 margin-right: 40px;
                 margin-bottom: 40px;
                 padding: 20px;
@@ -44,6 +43,7 @@
                 label{
                     font-size: 14px;
                     font-weight: 300;
+                    color: $color-font-text;
                 }
                 
                 &:hover{
@@ -51,6 +51,24 @@
                     border-color: $color-module-hover;
                 }
             }
+        }
+    }
+}
+
+.portfolio-tags{
+    margin-top: 20px;
+    
+    >li{
+        padding: 8px;
+        background-color: #f9f9f9;
+        border-radius: 4px;
+        color: $color-active-light;
+        font-size: 12px;
+        float: left;
+        margin-right: 10px;
+        
+        &:last-of-type{
+            margin-right: 0;
         }
     }
 }
