portfolio page / animated icons section

--- a/sass/main.min.scss
+++ b/sass/main.min.scss
@@ -17,3 +17,5 @@
         'layout/pages/portfolio/01-animated-icons';
 
 @import 'layout/sections/skills';
+
+@import 'layout/pages/portfolio/01-animated-icons';
