--- a/sass/layout/pages/portfolio/_portfolio.scss
+++ b/sass/layout/pages/portfolio/_portfolio.scss
@@ -51,6 +51,12 @@
                     border-color: $color-module-hover;
                 }
             }
+            
+            &.disabled{
+                opacity: 0.5;
+                cursor: default;
+                pointer-events: none;
+            }
         }
     }
 }
