--- a/sass/elements/_icons.scss
+++ b/sass/elements/_icons.scss
@@ -26,7 +26,7 @@ i,a{
         background: url('../img/education.svg') no-repeat center;
     }
 
-    &.icon-contact{
+    &.icon-phonebook{
         background: url('../img/contact.svg') no-repeat center;
     }
 
